# OCT_registration_framework

./: .gitattributes  .gitignore  README.md  config_transmorph.py  datapaths.yaml  extract_registered_enface.py  funcs_transmorph.py  pyproject.toml  pyside_gui.py  registration_endo.py  registration_endo_multiproc.py  registration_script.py  requirements.txt
GUI_scripts/: gui_registration_script.py  gui_util_funcs.py
models/: model_transmorph_LRNPOSEMBD_Large_onlyX_batch32_ncc_normalized_shiftrange3_dynamiccrop_onlyMSE.pt  model_transmorph_LRNPOSEMBD_Large_x_translation.pt  model_transmorph_x_translation.pt
utils/: reg_util_funcs.py  util_funcs.py
