[project]
name = "oct-reg"
version = "0.1.0"
description = "OCT Registration Framework package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "napari>=0.6.2",
    "natsort>=8.4.0",
    "numpy>=2.3.1",
    "pydicom>=3.0.1",
    "pyside6>=6.9.1",
    "scikit-image>=0.25.2",
    "timm>=1.0.17",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.162",
]

[project.optional-dependencies]
multiproc = [
    "dask>=2025.5.1",
    "dask-jobqueue>=0.9.0",
]

[tool.setuptools]
packages = ["GUI_scripts", "utils"]
